fix: Hide overflow x

--- a/src/components/portfolio-section/Portfolio.css
+++ b/src/components/portfolio-section/Portfolio.css
@@ -2,16 +2,18 @@
   position: relative;
 }
 
-.portfolio-wrapper {
+.section-full.portfolio-wrapper {
   display: flex;
   overflow: hidden;
+  padding-inline: 0;
+  width: 100%;
 }
 
 .portfolio-content {
   display: flex;
-  gap: 1rem;
   flex: 1;
   transition: transform 1200ms cubic-bezier(0.88, 0, 0.265, 1);
+  max-width: 100%;
 }
 
 .portfolio-slide {
@@ -20,6 +22,7 @@
   display: flex;
   align-items: center;
   min-width: 100%;
+  padding-inline: 1rem;
 }
 
 .portfolio-slide.project {
@@ -146,7 +149,7 @@
 .sphere-lg {
   position: absolute;
   inset-block-start: 50%;
-  inset-inline-end: 10%;
+  inset-inline-end: 15%;
   transform: translateY(-50%);
   opacity: 0.7;
   z-index: -1;
@@ -155,7 +158,7 @@
 .sphere-md {
   position: absolute;
   inset-block-end: 90px;
-  inset-inline-start: 0;
+  inset-inline-start: 10%;
   z-index: -1;
 }
 
@@ -163,6 +166,7 @@
   position: absolute;
   inset-block-start: 150px;
   inset-inline-start: 25%;
+  z-index: -1;
 }
 
 @media (min-width: 768px) {
